--- a/style/member/orderDetailModal.css
+++ b/style/member/orderDetailModal.css
@@ -15,7 +15,67 @@
     left: 50%;
     transform: translate(-50%, -50%);
     margin: 0 auto;
+    width: 560px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 6px;
+}
+
+#okPurchase {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 6px;
+}
+
+#writeReview2 {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
     width: 700px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 6px;
+}
+
+#changeModal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+    width: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 6px;
+}
+
+#refundModal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0 auto;
+    width: 900px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,7 +86,7 @@
 
 .modalHeader {
     width: 100%;
-    height: 64px;
+    height: 52px;
     padding: 16px 20px;
     box-sizing: border-box;
     background-image: linear-gradient(266deg, #ff597e, #e96f5d);
@@ -34,7 +94,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 22px;
+    font-size: 18px;
     color: white;
 }
 
@@ -43,9 +103,9 @@
     background-repeat: no-repeat;
     background-position: center;
     background-color: inherit;
-    background-size: 18px 18px;
-    width: 18px;
-    height: 18px;
+    background-size: 15px 15px;
+    width: 15px;
+    height: 15px;
     border: none;
     cursor: pointer;
 }
@@ -59,26 +119,26 @@
 }
 
 .modalBody h4 {
-    margin: 20px 0 0 0px;
+    margin: 16px 0 0 0px;
     padding-bottom: 16px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #eee;
 }
 
 .modalBody > div:not(:last-child) {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #eee;
 }
 
 .productInfo {
     display: flex;
-    column-gap: 30px;
-    padding: 30px 16px;
+    column-gap: 20px;
+    padding: 20px 16px;
 }
 
 .productInfo img {
-    width: 150px;
-    height: 150px;
+    width: 130px;
+    height: 130px;
 }
 
 .productDetailInfo {
@@ -86,10 +146,10 @@
 }
 
 .productDetailInfo > div {
-    font-size: 14px;
+    font-size: 13px;
     display: flex;
+    align-items: center;
     column-gap: 6px;
-    margin-bottom: 2px;
 }
 
 .productDetailInfo > div:first-child {
@@ -117,7 +177,7 @@
 }
 
 .orderPrice > p:first-child {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 700;
 }
 
@@ -135,17 +195,17 @@
 }
 
 .paymentInfo > table tr > td {
-    height: 30px;
+    height: 26px;
 }
 
 .paymentInfo > table tr > td:first-child {
-    font-size: 14px;
-    font-weight: 500;
+    font-size: 13px;
+    font-weight: 400;
 }
 
 .paymentInfo > table tr > td:last-child {
     text-align: right;
-    font-size: 14px;
+    font-size: 13px;
     color: #111;
 }
 
@@ -158,8 +218,291 @@
     letter-spacing: 0.4px;
 }
 
-.sellerName {
-    font-weight: 700;
+.okPurchase {
+    margin-top: 20px;
+    margin-bottom: 5px;
 }
 
+.okPurchase p {
+    margin: 0;
+    font-size: 13px;
+    color: #222;
+}
 
+.okPurchase p > span {
+    font-size: 13px;
+    margin-right: 2px;
+    margin-top: 7px;
+    color: red;
+}
+
+.okPurchase p:not(:last-child) {
+    margin-bottom: 4px;
+}
+
+.okPurchase div {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 24px;
+}
+
+.okPurchase div > button {
+    width: 54px;
+    height: 33px;
+    border: none;
+    font-size: 12px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.okPurchase div > button:first-child {
+    background-color: #bbbbbb;
+    color: white;
+}
+
+.okPurchase div > button:last-child {
+    background-color: #d15e4f;
+    color: white;
+}
+
+.writeReview2 {
+    margin-top: 10px;
+}
+
+.writeReview2 form {
+    width: 100%;
+}
+
+.writeReview2 input::placeholder {
+    font-size: 11.3px;
+}
+.writeReview2 textarea::placeholder {
+    font-size: 12px;
+}
+
+.writeReview2 input[type="text"] {
+    width: 100%;
+    height: 34px;
+    outline: none;
+    box-sizing: border-box;
+    padding-left: 10px;
+    border: 1px solid #ccc;
+}
+
+.writeReview2 textarea {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    resize: none;
+    outline: none;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    font-family: "Pretendard Variable", Pretendard, sans-serif;
+}
+
+.writeReview2 div:not(.rating) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.writeReview2 div p {
+    font-size: 12px;
+    color: #555;
+}
+
+.writeReview2 table {
+    width: 96%;
+}
+
+.writeReview2 table * {
+    font-size: 13px;
+}
+
+.writeReview2 table td {
+    height: 46px;
+}
+
+.writeReview2 table td:first-child {
+    width: 10%;
+    text-align: right;
+    padding-right: 20px;
+}
+
+.writeReview2 table td:last-child {
+    width: 90%;
+}
+
+.review2Btn {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 30px;
+    padding-bottom: 10px;
+}
+
+.review2Btn button {
+    border-radius: 3px;
+    width: 80px;
+    height: 40px;
+    font-size: 13px;
+    border: none;
+    cursor: pointer;
+}
+
+.review2Btn button:first-child {
+    background-color: #bbbbbb;
+    color: white;
+}
+
+.review2Btn button:last-child {
+    background-color: #d15e4f;
+    color: white;
+}
+
+.rating {
+    display: inline-block;
+}
+
+.star {
+    font-size: 30px;
+    color: #ccc; /* 기본 회색 */
+    cursor: pointer;
+}
+
+.star.selected {
+    color: #f39c12; /* 선택된 별은 노란색 */
+}
+
+.star:hover {
+    color: #f39c12; /* 호버 시 노란색 */
+}
+
+.hidden-file-input {
+    display: none;
+}
+
+.custom-file-upload {
+    padding: 6px 12px;
+    background-color: #d15e4f;
+    color: white;
+    border-radius: 3px;
+    font-size: 12px !important;
+    cursor: pointer;
+    margin-top: 1px;
+}
+
+.file-name {
+    margin-left: 10px;
+    font-size: 12px !important;
+    color: #333;
+}
+
+.changeModal * {
+    font-size: 13px;
+}
+
+.radio {
+    display: flex;
+}
+
+.radio input:first-child {
+    margin-right: 6px;
+}
+
+.radio input:not(:first-child) {
+    margin-left: 20px;
+    margin-right: 6px;
+}
+
+.changeModal table {
+    width: 100%;
+}
+
+.yourFault {
+    height: 20px !important;
+    padding-bottom: 20px;
+}
+.yourFault p {
+    margin: 0;
+    font-size: 11px;
+    color: #777;
+}
+
+.changeModal table td:first-child {
+    width: 20%;
+}
+
+.changeModal table td {
+    height: 46px;
+    width: 23.3%;
+}
+
+.changeModal textarea {
+    width: 96%;
+    height: 80px;
+    padding: 10px;
+    box-sizing: border-box;
+    resize: none;
+    outline: none;
+    vertical-align: middle;
+    border: 1px solid #ccc;
+    font-family: "Pretendard Variable", Pretendard, sans-serif;
+}
+
+.fileBtnBox {
+    margin-top: 30px;
+}
+
+.fileBtnBox > .file-upload-wrapper {
+    margin-bottom: 16px;
+}
+
+.changeModal table tr:nth-of-type(1) td:nth-of-type(3),
+.changeModal table tr:nth-of-type(2) td:nth-of-type(3),
+.changeModal table tr:nth-of-type(3) td:nth-of-type(3),
+.changeModal table tr:nth-of-type(4) td:nth-of-type(3) {
+    width: 20%;
+}
+
+/* ----------------------------------------------------- */
+
+.refundModal * {
+    font-size: 13px;
+}
+
+.refundModal table {
+    width: 100%;
+}
+
+.refundModal table td:first-child {
+    width: 20%;
+}
+
+.refundModal table td {
+    height: 46px;
+    width: 23.3%;
+}
+
+.refundModal textarea {
+    width: 96%;
+    height: 80px;
+    padding: 10px;
+    box-sizing: border-box;
+    resize: none;
+    outline: none;
+    vertical-align: middle;
+    border: 1px solid #ccc;
+    font-family: "Pretendard Variable", Pretendard, sans-serif;
+}
+
+.refundModal table tr:nth-of-type(1) td:nth-of-type(3),
+.refundModal table tr:nth-of-type(2) td:nth-of-type(3),
+.refundModal table tr:nth-of-type(3) td:nth-of-type(3),
+.refundModal table tr:nth-of-type(4) td:nth-of-type(3) {
+    width: 20%;
+}
+
+.writeReview .sellerName {
+    font-weight: 700;
+}
